--- a/notebooks/prototype_consensus_acc.ipynb
+++ b/notebooks/prototype_consensus_acc.ipynb
@@ -46,7 +46,7 @@
     "            # reconstructor acc\n",
     "            reconstructor_ndx = argmax(reconstructor_output, dim=1)\n",
     "            return reconstructor_ndx\n",
-    "            \n",
+    "\n",
     "            # reconstructor_accuracy = (\n",
     "            #     torch_sum(reconstructor_ndx == input_ndx.reshape((-1,)))\n",
     "            #     / reconstructor_ndx.shape[0]\n",
@@ -64,6 +64,7 @@
     "            # del reconstructor_output\n",
     "            return\n",
     "\n",
+    "\n",
     "class NewModel(Model):\n",
     "    def build_model(self, model_type, arch):\n",
     "        if model_type == \"AE\":\n",
@@ -77,24 +78,29 @@
     "        #         self.d0, self.d1, self.dn, self.w, arch\n",
     "        #     )\n",
     "        self.autoencoder.to(self.device)\n",
+    "\n",
     "    def test(self, num_test_items=1, input_noise=0.0):\n",
-    "        for test_batch in self.data_loader.get_test_batch(num_test_items=num_test_items):\n",
+    "        for test_batch in self.data_loader.get_test_batch(\n",
+    "            num_test_items=num_test_items\n",
+    "        ):\n",
     "            results = self.autoencoder.test_batch(\n",
     "                test_batch, self.device, input_noise=input_noise, wandb_log=False\n",
     "            )\n",
     "            return results\n",
     "\n",
+    "\n",
     "class NewSession(Session):\n",
-    "    \n",
     "    def add_model(self, name, arch, model_type, d0=21, d1=8, dn=10, w=20):\n",
     "        arch = self.load_arch(arch)\n",
     "        if self.model is None:\n",
     "            self.model = NewModel(name, arch, model_type, d0=d0, d1=d1, dn=dn, w=w)\n",
-    "            \n",
+    "\n",
     "    def load_data(self, dataset_name):\n",
-    "        data_files = sorted(glob(str(Model.root) + f\"/data/{dataset_name}/*.csv.gz\"))[:2]\n",
+    "        data_files = sorted(glob(str(Model.root) + f\"/data/{dataset_name}/*.csv.gz\"))[\n",
+    "            :2\n",
+    "        ]\n",
     "        self.model.load_data(dataset_name, data_files)\n",
-    "        \n",
+    "\n",
     "    def test(self, num_test_items=1, input_noise=0.0):\n",
     "        return self.model.test(num_test_items=num_test_items, input_noise=input_noise)"
    ]
@@ -107,11 +113,11 @@
    "outputs": [],
    "source": [
     "session = NewSession()\n",
-    "model_name = 'dummy'\n",
-    "arch = 'gen1'\n",
-    "model_type = 'AE'\n",
-    "dataset = 'w_20_KeggSeq_ndx_wpACT'\n",
-    "run_title = 'prototyping_consensus_acc'\n",
+    "model_name = \"dummy\"\n",
+    "arch = \"gen1\"\n",
+    "model_type = \"AE\"\n",
+    "dataset = \"w_20_KeggSeq_ndx_wpACT\"\n",
+    "run_title = \"prototyping_consensus_acc\"\n",
     "w = 20"
    ]
   },
@@ -205,28 +211,31 @@
     }
    ],
    "source": [
-    "\n",
     "w = 5\n",
     "l = 20\n",
     "ol = l - w + 1\n",
-    "output = torch.randint(0, w-1, (ol, w)).long()\n",
+    "output = torch.randint(0, w - 1, (ol, w)).long()\n",
     "\n",
     "print(output)\n",
+    "\n",
+    "\n",
     "def consensus(output, ndx, w):\n",
-    "    f_size = min(l-ndx, ndx+1)\n",
+    "    f_size = min(l - ndx, ndx + 1)\n",
     "    if f_size > w:\n",
     "        f_size = w\n",
     "    f = torch.fliplr(torch.eye(f_size).long())\n",
     "    # print(f_size)\n",
-    "    r_min = max(0, ndx-w+1)\n",
+    "    r_min = max(0, ndx - w + 1)\n",
     "    r_max = r_min + f_size\n",
     "    r_indices = torch.tensor(range(r_min, r_max))\n",
-    "    c_min = max(0, ndx-ol+1)\n",
-    "    c_max = min(ndx, w-1) + 1\n",
+    "    c_min = max(0, ndx - ol + 1)\n",
+    "    c_max = min(ndx, w - 1) + 1\n",
     "    c_indices = torch.tensor(range(c_min, c_max))\n",
-    "    sub_result = torch.index_select(torch.index_select(output, 0, r_indices), 1, c_indices)\n",
-    "    print(torch.mode(torch.diagonal(torch.fliplr(f*sub_result))).values.item())\n",
-    "    print('****************')"
+    "    sub_result = torch.index_select(\n",
+    "        torch.index_select(output, 0, r_indices), 1, c_indices\n",
+    "    )\n",
+    "    print(torch.mode(torch.diagonal(torch.fliplr(f * sub_result))).values.item())\n",
+    "    print(\"****************\")"
    ]
   },
   {
@@ -263,36 +272,40 @@
     "def consensus(output, ndx, w):\n",
     "    ol = len(output)\n",
     "    l = ol + w - 1\n",
-    "    f_size = min(l-ndx, ndx+1)\n",
+    "    f_size = min(l - ndx, ndx + 1)\n",
     "    if f_size > w:\n",
     "        f_size = w\n",
     "    f = torch.fliplr(torch.eye(f_size).long())\n",
-    "    r_min = max(0, ndx-w+1)\n",
+    "    r_min = max(0, ndx - w + 1)\n",
     "    r_max = r_min + f_size\n",
     "    r_indices = torch.tensor(range(r_min, r_max))\n",
-    "    c_min = max(0, ndx-ol+1)\n",
-    "    c_max = min(ndx, w-1) + 1\n",
+    "    c_min = max(0, ndx - ol + 1)\n",
+    "    c_max = min(ndx, w - 1) + 1\n",
     "    c_indices = torch.tensor(range(c_min, c_max))\n",
-    "    sub_result = torch.index_select(torch.index_select(output, 0, r_indices), 1, c_indices)\n",
-    "    return torch.mode(torch.diagonal(torch.fliplr(f*sub_result))).values\n",
+    "    sub_result = torch.index_select(\n",
+    "        torch.index_select(output, 0, r_indices), 1, c_indices\n",
+    "    )\n",
+    "    return torch.mode(torch.diagonal(torch.fliplr(f * sub_result))).values\n",
+    "\n",
     "\n",
     "def acc(seq, output, w):\n",
     "    n = 0\n",
     "    for i, ndx in enumerate(seq):\n",
     "        consensus_ndx = consensus(output, i, w)\n",
-    "        \n",
+    "\n",
     "        if ndx == consensus_ndx:\n",
     "            n += 1\n",
     "        # print(i, ndx, consensus_ndx, n)\n",
-    "    return n/len(seq)\n",
-    "    \n",
+    "    return n / len(seq)\n",
+    "\n",
+    "\n",
     "def main(w, l):\n",
     "    ol = l - w + 1\n",
     "    output = torch.randint(0, 21, (ol, w)).long()\n",
     "    seq = torch.randint(0, 21, (l,)).long()\n",
-    "    consensus_acc = acc(seq, output, w) \n",
+    "    consensus_acc = acc(seq, output, w)\n",
     "    # print(consensus_acc)\n",
-    "    \n",
+    "\n",
     "\n",
     "main(20, 100)"
    ]
@@ -344,8 +357,8 @@
     "l = 100\n",
     "w = 20\n",
     "r = 100\n",
-    "job = f'tensor_{w}_{l}_{r}'\n",
-    "job = f'np_{w}_{l}_{r}'\n",
+    "job = f\"tensor_{w}_{l}_{r}\"\n",
+    "job = f\"np_{w}_{l}_{r}\"\n",
     "\n",
     "with cProfile.Profile() as pr:\n",
     "    for _ in range(r):\n",
@@ -353,7 +366,7 @@
     "stats = pstats.Stats(pr)\n",
     "stats.sort_stats(pstats.SortKey.TIME)\n",
     "stats.print_stats()\n",
-    "filename=f'./profiling_{job}.prof'\n",
+    "filename = f\"./profiling_{job}.prof\"\n",
     "stats.dump_stats(filename)"
    ]
   },
@@ -385,7 +398,7 @@
     }
    ],
    "source": [
-    "system(f'snakeviz {filename}')"
+    "system(f\"snakeviz {filename}\")"
    ]
   },
   {
@@ -467,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_dir = session.root / 'models' / f'{model_name}' / 'versions' / f'{run_title}'"
+    "run_dir = session.root / \"models\" / f\"{model_name}\" / \"versions\" / f\"{run_title}\""
    ]
   },
   {
@@ -488,7 +501,7 @@
     }
    ],
    "source": [
-    "system(f'rm -r {str(run_dir)}')"
+    "system(f\"rm -r {str(run_dir)}\")"
    ]
   },
   {
