add is_testing, no_train args

--- a/notebooks/PrepareData_1.ipynb
+++ b/notebooks/PrepareData_1.ipynb
@@ -1147,7 +1147,44 @@
    "id": "179d87a6-2cc3-49ba-842f-6f5afef608a4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    def predict(self, input_vals, device, detailed_result=False):\n",
+    "        \"\"\"\n",
+    "        Test a single batch of data, this will move into autoencoder\n",
+    "        :param input_vals:\n",
+    "        :return:\n",
+    "        \"\"\"\n",
+    "        result = {\n",
+    "            'input ndx': None, 'output'\n",
+    "        }\n",
+    "        with no_grad():\n",
+    "            input_ndx, one_hot_input = self.transform_input(input_vals, device, input_noise=0.0)\n",
+    "            reconstructor_output = self.forward_test(one_hot_input)\n",
+    "            reconstructor_loss = self.criterion_NLLLoss(reconstructor_output, input_ndx.reshape((-1,)))\n",
+    "            # reconstructor acc\n",
+    "            reconstructor_ndx = argmax(reconstructor_output, dim=1)\n",
+    "            reconstructor_accuracy = (\n",
+    "                torch_sum(reconstructor_ndx == input_ndx.reshape((-1,))) / reconstructor_ndx.shape[0]\n",
+    "            )\n",
+    "            consensus_seq_acc, consensus_seq = consensus_acc(input_ndx, reconstructor_ndx.reshape((-1, self.w)), device)\n",
+    "            # reconstruction_loss, discriminator_loss, classifier_loss\n",
+    "            return (\n",
+    "                    reconstructor_loss,\n",
+    "                    reconstructor_accuracy,\n",
+    "                    consensus_seq_acc,\n",
+    "                    consensus_seq,\n",
+    "                )\n",
+    "        \n",
+    "        \n",
+    "            def predict(self, seq):\n",
+    "        padding = self.w - 1\n",
+    "        seq = (\"*\" * padding) + seq + (\"*\" * padding)\n",
+    "        seq_ndx = np.array([aa_keys.index(aa) for aa in seq])\n",
+    "        self.predict_data = DataLoader()\n",
+    "        self.predict_data.set_test_data_files(data)\n",
+    "        for data in self.predict_data.get_test_batch(num_test_items=-1):\n",
+    "            yield self.autoencoder.predict(data, self.device)"
+   ]
   }
  ],
  "metadata": {
