--- a/notebooks/colab_space.ipynb
+++ b/notebooks/colab_space.ipynb
@@ -10,27 +10,16 @@
         "from os import chdir\n",
         "chdir('/content/SeqEN')\n",
         "!git pull\n",
-        "!pip install -r '/content/SeqEN/requirements.txt'"
+        "!pip install -r '/content/SeqEN/requirements.txt'\n",
+        "from sys import path\n",
+        "if '/content/SeqEN/' not in path:\n",
+        "  path.insert(0,'/content/SeqEN/')"
       ],
       "metadata": {
         "id": "3-mWvce8U6fX"
       },
       "id": "3-mWvce8U6fX",
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sys import path\n",
-        "if '/content/SeqEN/' not in path:\n",
-        "  path.insert(0,'/content/SeqEN/')"
-      ],
-      "metadata": {
-        "id": "YT6Yvw8QWAGS"
-      },
-      "id": "YT6Yvw8QWAGS",
-      "execution_count": 4,
       "outputs": []
     },
     {
@@ -43,62 +32,181 @@
         "id": "cRXdlJITWH4o"
       },
       "id": "cRXdlJITWH4o",
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "session = NewSession()\n",
-        "model_name = 'dummy_gc'\n",
-        "arch = 'gen1'\n",
-        "model_type = 'AE'\n",
+        "session = Session()\n",
+        "model_name = 'AAEC'\n",
+        "arch = 'gen3'\n",
+        "model_type = 'AAEC'\n",
         "dataset = 'w_20_KeggSeq_ndx_wpACT'\n",
-        "run_title = 'prototyping_consensus_acc'\n",
-        "w = 20"
+        "run_title = 'AAEC_9td_noise05_gen3_gc'"
       ],
       "metadata": {
         "id": "A5kuxgqAZS5t"
       },
       "id": "A5kuxgqAZS5t",
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "session.add_model(model_name, arch, model_type)\n",
+        "session.load_data(dataset)"
       ],
       "metadata": {
         "id": "kgUOMqhUldlo"
       },
       "id": "kgUOMqhUldlo",
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "session.train(run_title, epochs=20, batch_size=10000, num_test_items=1,\n",
+        "              test_interval=100, training_params='params2', input_noise=0.05)"
       ],
       "metadata": {
-        "id": "V6taRr3JmH4D"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176,
+          "referenced_widgets": [
+            "d82bbaa5990241df956b3d0b56ac052c",
+            "4121dd15141242efac4c85531ab3902f",
+            "a7fcf864716e4d0e8b3a008ac6c63606",
+            "c20b5d39fce346dbac27ee5dd4e260d2",
+            "ecacaf0c2ad74ada83d5583f07d2b5bf",
+            "4edfa5c6b6f242a4b3143f793166ed83",
+            "e8f037e9d57442128bc8bde67ae7d318",
+            "584e74ef7c4f4bfda9c7181b9ff84ffa"
+          ]
+        },
+        "id": "V6taRr3JmH4D",
+        "outputId": "c748cd0d-7dad-4a70-ef0d-429c644476d5"
       },
       "id": "V6taRr3JmH4D",
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Finishing last run (ID:13s1y8u5) before initializing another..."
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<br/>Waiting for W&B process to finish, PID 493... <strong style=\"color:green\">(success).</strong>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "d82bbaa5990241df956b3d0b56ac052c",
+              "version_minor": 0,
+              "version_major": 2
+            },
+            "text/plain": [
+              "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: right }\n",
+              "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; width: 100% }\n",
+              "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+              "    </style>\n",
+              "<div class=\"wandb-row\"><div class=\"wandb-col\">\n",
+              "</div><div class=\"wandb-col\">\n",
+              "</div></div>\n",
+              "Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)\n",
+              "<br/>Synced <strong style=\"color:#cdcd00\">AAEC_9td_noise05_gen2_gc</strong>: <a href=\"https://wandb.ai/hadinayebi/AAEC/runs/13s1y8u5\" target=\"_blank\">https://wandb.ai/hadinayebi/AAEC/runs/13s1y8u5</a><br/>\n",
+              "Find logs at: <code>./wandb/run-20220109_213352-13s1y8u5/logs</code><br/>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Successfully finished last run (ID:13s1y8u5). Initializing new run:<br/>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "                    Syncing run <strong><a href=\"https://wandb.ai/hadinayebi/AAEC/runs/2ezk7bph\" target=\"_blank\">AAEC_9td_noise05_gen2_gc</a></strong> to <a href=\"https://wandb.ai/hadinayebi/AAEC\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
+              "\n",
+              "                "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "session.model.device"
       ],
       "metadata": {
-        "id": "l-Z7UDRjldtH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l-Z7UDRjldtH",
+        "outputId": "5258cabe-2d29-40f6-a8db-e894296b233c"
       },
       "id": "l-Z7UDRjldtH",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ],
   "metadata": {
@@ -112,6 +220,264 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
+    },
+    "accelerator": "GPU",
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "d82bbaa5990241df956b3d0b56ac052c": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "VBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_view_name": "VBoxView",
+            "_dom_classes": [],
+            "_model_name": "VBoxModel",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "box_style": "",
+            "layout": "IPY_MODEL_4121dd15141242efac4c85531ab3902f",
+            "_model_module": "@jupyter-widgets/controls",
+            "children": [
+              "IPY_MODEL_a7fcf864716e4d0e8b3a008ac6c63606",
+              "IPY_MODEL_c20b5d39fce346dbac27ee5dd4e260d2"
+            ]
+          }
+        },
+        "4121dd15141242efac4c85531ab3902f": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "a7fcf864716e4d0e8b3a008ac6c63606": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "LabelModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_view_name": "LabelView",
+            "style": "IPY_MODEL_ecacaf0c2ad74ada83d5583f07d2b5bf",
+            "_dom_classes": [],
+            "description": "",
+            "_model_name": "LabelModel",
+            "placeholder": "​",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": " 0.01MB of 0.01MB uploaded (0.00MB deduped)\r",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_4edfa5c6b6f242a4b3143f793166ed83"
+          }
+        },
+        "c20b5d39fce346dbac27ee5dd4e260d2": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "FloatProgressModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_view_name": "ProgressView",
+            "style": "IPY_MODEL_e8f037e9d57442128bc8bde67ae7d318",
+            "_dom_classes": [],
+            "description": "",
+            "_model_name": "FloatProgressModel",
+            "bar_style": "",
+            "max": 1,
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": 1,
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "orientation": "horizontal",
+            "min": 0,
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_584e74ef7c4f4bfda9c7181b9ff84ffa"
+          }
+        },
+        "ecacaf0c2ad74ada83d5583f07d2b5bf": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "DescriptionStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "4edfa5c6b6f242a4b3143f793166ed83": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "e8f037e9d57442128bc8bde67ae7d318": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ProgressStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "ProgressStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "bar_color": null,
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "584e74ef7c4f4bfda9c7181b9ff84ffa": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        }
+      }
     }
   },
   "nbformat": 4,
